Heading change - AWAY from GUEST
heading changed for the second board name from GUEST to now AWAY

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div>
 
-                <p class="headings">GUEST</p>
+                <p class="headings">AWAY</p>
                 
                     <div class="scorecard" id="scoreCardG">
                         <p class="score-text" id="guestScore">0</p>
